--- a/data-policy.tex
+++ b/data-policy.tex
@@ -2,3 +2,5 @@
 \label{sec:data-policy}
 
 % Our goal is to support work where the output will be made available to the broader research community. To that end, we ask that you provide us with a few sentences sharing what you intend to do with the output of your project (e.g. open sourcing code, making data sets public, etc.). Please note that Faculty Research Awards are structured as unrestricted gifts, so there are no legal requirements once a project is selected for funding. This is simply a statement of your current intentions.
+
+The source codes and datasets will also be made available on platforms such as sourceforge or github and on our personal webpages. We intend to make all results from this project available through publications in conferences and/or journals as well as in technical reports.
