--- a/abstract.tex
+++ b/abstract.tex
@@ -1,17 +1,27 @@
 \begin{center}
 	{\bf Abstract}
 \end{center}
-	
 
-The infrastructure of the network edge has been growing rapidly. Led by globally known companies in the market. Video Streaming services companies such as Netflix, Google and Amazon have interests in improving their CDN services, as a primary goal to save on bandwidth costs and operational services without violating Quality of Experience (QoE) guarantees. The video streaming services already is responsible for the majority of the Internet traffic. A good cloud-level architecture partially solves some issues related to the live stream and Video on Demand (VoD) services.  At same time, however, it introduces new ones such as higher latency and core network congestion. 
-In order to improve on this matter, this work proposes a set of services to video streaming in a multi-tier fog computing environment.
+Video Streaming based on Dynamic Adaptative Streaming over HTTP (DASH) has been widely adopted by the Internet video technologies companies such as Netflix, Adobes HDS, Akamai HD, Google and Amazon, where the client-side video player can dynamically pick the bitrate level according to the perceived available bandwidth using HTTP protocol. 
+At the same time, the video streaming services on the CDN providers represents the majority of the internet traffic, the cisco forecast [?] estimates that in 2021 70\% of all internet traffic will be dominated by the video-streaming, whereas for mobile devices this estimate respresent 78\% of all mobile data traffic. To accomodate this traffic %many companies have established their own CDNs to realize high availablity and low latency through deploying several geographically distributed. 
+A good cloud-level architecture partially solves some issues related to the live stream and Video on Demand (VoD) services,%.  At same time, 
+however, it introduces new ones such as higher latency and core network congestion. 
+In order to improve on this matter, this work proposes the use the use of edge network to deploy microservices of video streaming to improve the end-users Quality of Experience (QoE), the subject services respect the QoE garantees include the video transcoding and cache schemes. 
+Initially a smartly caching videos in edge nodes can reduce traffic load and delay, since multimedia content may be readily available closer to the users. Video streaming can be tailored according to the user’s device and network characteristics. It is essential to provide a more adequate use of the bandwidth available for nodes at the edge network.% Moreover, a transcoder service can be used to transcode a video with a bit rate of 8 Mbps (1080p) to 5 Mbps (720p), with no visible loss in quality, if the end-user device is not ready to display videos in 1080p. This allows a larger number of users to be served while maintaining a satisfactory QoE. 
+The deployment of such services in the edge/cloud environment is non-trivial to design an efficient data transfer scheme in this frontend-backend architecture.
 
-The video streaming services already is responsible for the majority of the Internet traffic. A good cloud-level architecture partially solves some issues related to the live stream and Video on Demand (VoD) services.  At same time, however, it introduces new ones such as higher latency and core network congestion. In order to improve on this matter, this work proposes a set of services to video streaming in a multi-tier fog computing environment. It also takes into consideration classified hierarchical tiers and the ETSI-NFV architecture.
+In this proposal, we aim to build an hierarchical adaptive multimedia delivery system to analyze the influence of chunk size variation on bitrate adaptation scheduling algorithm performance. Based on the features of HTTP-based adaptive video streaming, we build a general model for debloy a cooperative video streaming delivery, which may be used in D2D in mobile network, regional networks using Points of Presence as nodes, during flash crowds where having upload bandwidth alone is not sufficient to accommodate the flash crowd as the nodes take time to locate the available resources.
 
-The main goal is to design and assess a reliable and high-quality multi-tier services architecture to be used in the fog/edge environments.
-We discuss the impact on the performance introduced by the multi-tier fog/edge computing, and also how the services may be used to improving the Quality of Experience (QoE) for end-users.
-	
-The infrastructure of the network edge has been growing rapidly. Led by globally known companies in the market. CDN providers like Akamai, LimeLight, Level 3 and MaxCDN have made major investments in leading edge servers in emerging markets such as Asia, South America and Africa. VoD service companies such as Netflix, Google and Amazon have interests in improving their CDN services, as a primary goal to save on bandwidth costs and operational services without violating QoE guarantees. In addition, this paradigm has attracted companies such as Intel, Qualcomm, IBM, Cisco, who usually mention a big growth on the edge of the network in the near future.
+%Based on the features of HTTP-based adaptive video streaming, we build a general model describing the playback buffer evolution process. Applying stochastic theory, we respectively analyze the two most concerned metrics – rebuffering probability and average bitrate level as well as their relationships with chunk size variation in the widely-adopted rate-based algorithm. Furthermore, based on theoretical insights, we provide some recommendations for algorithm designing and bitrate encoding and also propose a lightweight adaptation algorithm. Extensive simulations verify our insights as well as the efficiency of proposed recommendations and algorithm. In summary, our contributions are three-fold.
+
+
+%have interests in improving their CDN services, as a primary goal to save on bandwidth costs and operational services without violating Quality of Experience (QoE) guarantees. The video streaming services already is responsible for the majority of the Internet traffic. A good cloud-level architecture partially solves some issues related to the live stream and Video on Demand (VoD) services.  At same time, however, it introduces new ones such as higher latency and core network congestion. 
+%
+%
+%The main goal is to design and assess a reliable and high-quality multi-tier services architecture to be used in the fog/edge environments.
+%We discuss the impact on the performance introduced by the multi-tier fog/edge computing, and also how the services may be used to improving the Quality of Experience (QoE) for end-users.
+%	
+%The infrastructure of the network edge has been growing rapidly. Led by globally known companies in the market. CDN providers like Akamai, LimeLight, Level 3 and MaxCDN have made major investments in leading edge servers in emerging markets such as Asia, South America and Africa. VoD service companies such as Netflix, Google and Amazon have interests in improving their CDN services, as a primary goal to save on bandwidth costs and operational services without violating QoE guarantees. In addition, this paradigm has attracted companies such as Intel, Qualcomm, IBM, Cisco, who usually mention a big growth on the edge of the network in the near future.
 
 %
 % ===========================================================================================
