--- a/paper.tex
+++ b/paper.tex
@@ -5,6 +5,7 @@
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
 \usepackage{hyperref}
+\usepackage{graphicx}
 
 \usepackage{booktabs}
 
@@ -24,7 +25,9 @@
 	{\bf Proposal Title:} \\
 	{\bf Faculty Full Name:} Luiz Fernando Bittencourt \hfill bit@ic.unicamp.br \\
 	{\bf PhD candidate:} Eduardo de Souza Gama \hfill eduardogama@lrc.ic.unicamp.br \\
-	{\bf Google Contact name:} Walfredo Cirne
+	Instituto de Computação, Universidade Estadual de Campinas \\
+	Av. Albert Einstein, 1251, 13087-460, Campinas-SP, Brazil \\
+	% {\bf Google Contact name:} Walfredo Cirne
 	% \normalsize ECE 100-003 \hfill Teammates: Student1, Student2 \\
 	% TA: Adam Sumner \hfill Due Date: XX/XX/XX
 
@@ -39,9 +42,11 @@
     
     \input{releated-work}
 
-    \input{data-policy}
+\begin{thebibliography}{11}
 
-\begin{thebibliography}{9}
+\bibitem{bonomi14} F. Bonomi, R. Milito, P. Natarajan, and J. Zhu, Fog Computing: A Platform for Internet of Things and Analytics, pp. 169–186. Cham: Springer International Publishing, 2014.
+
+\bibitem{talebComMag17} T. Taleb, S. Dutta, A. Ksentini, M. Iqbal, and H. Flinck, "Mobile edge computing potential in making cities smarter," Comm. Mag., vol. 55, pp. 38–43, Mar. 2017.
 
 \bibitem{shenIWQoS19} Gengbiao Shen, Qing Li, Yong Jiang, Richard Sinnott, Dong Lin, Zehua Guo, Yi Wang. Chunk-Level Request-Grant-Transfer Mode for QoE-Sensitive Video Delivery in CDN. IWQoS, 2019.
 
@@ -68,9 +73,11 @@
 % \bibitem{Flueck}  Flueck, Alexander J. 2005. \emph{ECE 100}[online]. Chicago: Illinois Institute of Technology, Electrical and Computer Engineering Department, 2005 [cited 30 August 2005]. Available from World Wide Web: (http://www.ece.iit.edu/~flueck/ece100).
 
 \end{thebibliography}
+
+
+	\input{data-policy}
 	
 	\section{Attach CVs (maximum two pages for CVs)}
 	
-
 
 \end{document}
